# lab3

source/: CMakeLists.txt  Makefile  allocs.c  allocs.h  main.c  mem_allocators.c  mem_allocators.h
test/: allocs.c
